--- a/package.json
+++ b/package.json
@@ -13,8 +13,6 @@
     "@json2csv/plainjs": "^6.1.3",
     "axios": "^1.2.0",
     "cheerio": "^1.0.0-rc.12",
-    "json-2-csv": "^4.0.0",
-    "puppeteer": "^20.1.1",
-    "unzipper": "^0.10.11"
+    "json-2-csv": "^4.0.0"
   }
 }
