--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,8 +4,8 @@ name: er wait time scraper
 
 # Controls when the workflow will run
 on:
-  schedule:
-  - cron: "0 * * * *" #run hourly. https://crontab.guru/examples.html
+  # schedule:
+  # - cron: "0 * * * *" #run hourly. https://crontab.guru/examples.html
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
